--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -24,6 +24,7 @@
     "format:lint": "npm run format && npm run lint",
     "clear": "rimraf build",
     "build": "npm run clear && react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
