--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "assignment",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shelooks16.github.io/assignment-cart",
+  "homepage": "https://aryan-raj-raushan.github.io/E-kart",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
